# tenant.chat

./: .gitignore  README.md  pyproject.toml
baselines/community/: cis-m365-v3.1.yaml  nist-800-53-m365.yaml  zero-trust-ramp.yaml
baselines/microsoft/: azure-security.yaml  baseline-security-mode.yaml  entra-identity.yaml  exchange-purview.yaml  intune-windows.yaml
tenantchat/: __init__.py  agent.py  assessor.py  auth.py  blast.py  campaigns.py  cli.py  cluster.py  collector.py  embedder.py  memory.py  models.py  reporter.py  scrubber.py  server.py  store.py
ui/: index.html
