[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenantchat"
version = "0.1.0"
description = "Local-first conversational AI agent for M365 tenant security assessment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["microsoft-365", "security", "intune", "entra", "ai", "mcp"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "anthropic>=0.25.0",
    "msal>=1.28.0",
    "keyring>=25.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "mem0ai>=0.0.20",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    "rich>=13.7.1",
    "python-dotenv>=1.0.0",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
tenantchat = "tenantchat.cli:cli"

[project.urls]
Repository = "https://github.com/neoparadigm/tenantchat"

[tool.setuptools.packages.find]
where = ["."]
include = ["tenantchat*"]
